# victor-invest

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_COMPLETE.md  Makefile  NOTICE  README.adoc  README.md  SECURITY.md  STX_ANALYSIS_REPORT.md  TODOS.md  cli_orchestrator.py  codebase_organization_recommendations.md  config.yaml  docker-compose.yml  investigator_v2.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  saveBetaForStock.py  stock_beta_calculator.py  test_comprehensive_e2e.py
.github/: PULL_REQUEST_TEMPLATE.md
admin/: dashboard.py
analysis/: AAPL_LOG_DETAILED_ANALYSIS.md  ANALYSIS_SUMMARY_20251112.txt  ARCHITECTURE_CONSOLIDATION_ANALYSIS.md  ARCHITECTURE_REDESIGN_SPEC_20251112.md  BULK_TABLE_VERIFICATION.md  BULK_TABLE_YTD_DISCOVERY.md  CLI_INTEGRATION_VALIDATION.md  COMPREHENSIVE_CODEBASE_ANALYSIS_20251112.md  COMPREHENSIVE_FIX_SUMMARY.md  CRITICAL_INTEGRATION_GAP.md  DASH_PE_DIVERGENCE_ANALYSIS.md  FINAL_STATUS_AND_RECOMMENDATION.md  FIX_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IS_YTD_FLOW_COMPLETE_ANALYSIS.md  LOG_ANALYSIS_CRITICAL_ISSUES.md  NVDA_COMPREHENSIVE_ISSUE_ANALYSIS.md  PHASE_4_PROGRESS_20251112.md  QTRS_DETECTION_IMPLEMENTATION_PLAN.md  README_ANALYSIS_20251112.md  ROBUST_DATA_MODEL_DESIGN.md  SCHEMA_MIGRATION_STATUS.md  SEC_DATA_PROCESSING_BUG_ANALYSIS.md  SEC_DATA_SOURCES_YTD_COMPLETE_ANALYSIS.md  V_V2_LOG_ISSUES_AND_FIXES_20251112.md  YTD_CONVERSION_BUG_ANALYSIS.md  YTD_FIX_SUMMARY.md  ZS_WARNING_ANALYSIS_20251112.md  ibkr_analysis_log_issues.md  sp100_statement_qtrs_patterns.json  sp100_ytd_bulk_analysis.json  symbol_metadata_improvements_summary.md  symbol_table_metadata_analysis.md  symbol_update_agent_valuation_analysis.md  valuation_pipeline_test_results.md  valuation_services_consolidation_analysis.md  valuation_services_consolidation_implementation.md
api/: main.py
audit/: audit_2026-01-02.jsonl  audit_2026-01-03.jsonl
config/: .env.example  .env.template  company_archetype_rules.yaml  config.py  config.yaml  crontab.production  data_sources_registry.yaml  model_selection.yaml  scheduler.yaml  sector_multiples.json
dao/: insider_trading_dao.py  sec_bulk_dao.py
data/: __init__.py  models.py  ticker_data.csv  ticker_insert.sql
diagrams/: agent-interaction-flow.mmd  agentic-ai-architecture.mmd  analysis-pipeline.puml  architecture-overview.puml  cache-architecture.puml  cache-flow.mmd  cache-operations-flow.mmd  comprehensive-system-architecture.mmd  context-management-flow.mmd  data-flow-enhanced.mmd  data-flow.mmd  enhanced-cache-architecture.mmd  llm-architecture-enhanced.puml  llm-architecture-simplified.mmd  llm-processing-architecture.mmd  model-intelligence-system.puml  peer-group-architecture.mmd  peer-methodology.puml  refactored-cache-architecture.puml  synthesis-modes-flow.mmd  synthesis-modes.puml  system-architecture-overview.puml
docs/: AGENTS.md  ANALYSIS_INDEX.md  ARCHITECTURAL_ISSUES_ANALYSIS.md  ARCHITECTURE.adoc  ARCHITECTURE.md  ARCHITECTURE_DECISION_DATA_ACCESS.md  ARCHITECTURE_DUPLICATION_ANALYSIS.md  ARCHITECTURE_DUPLICATION_VISUAL.txt  BUG_FIXES.adoc  CLEAN_ARCHITECTURE_MIGRATION.md  CLI_DATA_COMMANDS.md  CODEBASE_REVIEW.md  CREDENTIAL_MANAGEMENT.md  CREDIT_RISK_MODELS.md  CRITICAL_FIXES_20251112.md  DATA_COLLECTION_SCHEDULE.md  DATA_PIPELINE_FIX_20251112.md  DATA_QUALITY_FIXES_20251113.md  DCF_VALUATION_FIXES_20251113.md  DEDUPLICATION_CHECKLIST.md  DEVELOPER_GUIDE.adoc  EDGE_CASE_VALIDATION_SUMMARY.md  ENHANCED_DYNAMIC_WEIGHTING_IMPLEMENTATION.md  ENHANCED_WEIGHTING_DEBUG_SESSION.md  ENHANCED_WEIGHTING_FINAL_SUMMARY.md  ENHANCED_WEIGHTING_SESSION_20251113.md  EXECUTIVE_SUMMARY.md  FADING_GROWTH_EXAMPLES.md  FINAL_VALIDATION.adoc  FISCAL_YEAR_ASSIGNMENT_TRACE.md  FISCAL_YEAR_CODE_LOCATIONS.md  FISCAL_YEAR_EDGE_CASE_ANALYSIS.md  FISCAL_YEAR_EDGE_CASE_TEST_DATA.md  FISCAL_YEAR_HANDLING.md  FISCAL_YEAR_INITIAL_ASSIGNMENT_SUMMARY.md  FISCAL_YEAR_PERFORMANCE_ANALYSIS.md  FISCAL_YEAR_QUICK_REFERENCE.txt  FISCAL_YEAR_TRACE_INDEX.md  FREE_DATA_SOURCES.md  GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.adoc  (+45 more)
migrations/: 20251102_create_sec_3table_architecture.sql  20251105_add_extended_metrics_to_sec_processed.sql  20251105_add_fundamental_metrics_to_symbol.sql  alembic.ini  env.py
models/: database.py
monitoring/: prometheus.yml
patterns/: __init__.py
prompts/: investment_synthesis.j2  investment_synthesis_comprehensive.j2  investment_synthesis_comprehensive_mode.j2  investment_synthesis_peer.j2  investment_synthesis_quarterly_mode.j2  quarterly_fundamental_analysis.j2  risk_assessment.j2  sec_fundamental_analysis.j2  technical_analysis.j2  technical_analysis_enhanced.j2  technical_analysis_simple.j2
resources/: russell1000_classifications.json  russell1000_overrides.py
schema/: add_missing_tables.sql  add_tier3_tables.sql  consolidated_schema.sql  rl_multi_period_migration.sql  rl_schema.sql  scheduled_tables.sql
scripts/: add_metadata_columns.sql  analyze_backtest.py  analyze_sector_logs.py  analyze_sp100_statement_qtrs_patterns.py  analyze_sp100_ytd_bulk_tables.py  audit_canonical_coverage.py  backfill_sec_sector_industry.py  batch_analysis_runner.py  benchmark_victor_workflows.py  clean_industry_whitespace.py  config.yaml  convert_to_snake_case.py  debug_balance_sheet.py  end_to_end_sector_test.py  fetch_russell1000_classifications.py  fred_analysis.py  generate_weekly_recommendations.py  insider_trading_cli.py  institutional_holdings_cli.py  investigator.sh  macro_data_cli.py  market_regime_cli.py  migrate_add_statement_qtrs_columns.sql  migrate_cache_fiscal_periods.py  migrate_claude_to_local.sh  mount_readyshare.sh  normalize_sectors_to_mapping.py  package_install.sh  populate_derived_metadata.sql  populate_exchange_data.py  populate_from_nasdaq_directory.py  populate_sic_codes.py  reorganize_scripts.sh  reprocess_nee_bulk_table.py  rl_backtest.py  rl_backtest_workflow.py  rl_deploy.py  rl_outcome_updater.py  rl_test_live.py  rl_train.py  (+25 more)
tests/: conftest.py  test_credentials.py  (+3 more)
(+605 files in other folders)
